# crypto-portfolio

./: .gitignore  Cargo.toml  LICENSE  README.md
data-sources/api-client/: Cargo.toml
data-sources/api-client/src/: cache.rs  cache_redis.rs  cache_sqlite.rs  client.rs  errors.rs  lib.rs  sync.rs
data-sources/binance/: Cargo.toml
data-sources/binance/src/: api_model.rs  client.rs  errors.rs  exchange.rs
data-sources/coinbase/: Cargo.toml
data-sources/coinbase/src/: api_model.rs  client.rs  exchange.rs
data-sources/coingecko/: Cargo.toml
data-sources/coingecko/src/: lib.rs
data-sources/custom/: Cargo.toml
data-sources/custom/src/: lib.rs
data-sources/exchange/src/: exchange.rs  lib.rs
data-sources/exchange/src/operations/: cost_basis.rs  db.rs  ops.rs  storage.rs
data-sources/market/: Cargo.toml
data-sources/market/src/: conversion.rs  lib.rs
data-sync/: Cargo.toml
data-sync/schemas/: operations.sql  transactions.sql
data-sync/src/: lib.rs  sqlite.rs
data-sync/src/schemas/: operations.sql
exchanges/api-client/: Cargo.toml
exchanges/api-client/src/: cache.rs  cache_redis.rs  client.rs  errors.rs  lib.rs  sync.rs
exchanges/binance/: Cargo.toml
exchanges/binance/src/: api_model.rs  client.rs  errors.rs  exchange.rs  lib.rs  response_model.rs
exchanges/coinbase/: Cargo.toml
exchanges/coinbase/src/: api_model.rs  client.rs  exchange.rs  lib.rs
exchanges/coingecko/: Cargo.toml
exchanges/coingecko/src/: lib.rs
exchanges/exchange/: Cargo.toml
exchanges/exchange/src/: exchange.rs  lib.rs
exchanges/exchange/src/operations/: cost_basis.rs  db.rs  exchange_ops.rs  mod.rs  ops.rs  profit_loss.rs  storage.rs
exchanges/market/: Cargo.toml
exchanges/market/src/: conversion.rs  lib.rs
exchanges/prices/: Cargo.toml
exchanges/prices/src/: lib.rs
operations/: Cargo.toml
operations/src/: cost_basis.rs  db.rs  exchange_ops.rs  lib.rs  models.rs  ops.rs  profit_loss.rs  storage.rs
portfolio/: Cargo.toml
portfolio/src/: cli.rs  config.rs  custom_ops.rs  data_syncer.rs  errors.rs  main.rs  reports.rs
src/: binance.rs  cli.rs  custom_ops.rs  data_fetch.rs  db.rs  errors.rs  main.rs  operations.rs  private.rs  reports.rs  result.rs  sync.rs  tracker.rs
src/binance/: client.rs  mod.rs  response_model.rs
src/operations/: binance_ops.rs  coinbase_ops.rs  db.rs  mod.rs  ops.rs  profit_loss.rs  storage.rs
transactions/: Cargo.toml
transactions/src/: cost_basis.rs  lib.rs  models.rs
