[package]
name = "portfolio"
version = "0.1.0"
authors = ["Ricardo Murillo <rcjmurillo@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.44"
binance = { path = "exchanges/binance" }
coinbase = { path = "exchanges/coinbase" }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
cli-table = "0.4"
futures = "0.3.15"
async-trait = "0.1.50"
bytes = "1.0.1"
structopt = "0.3.22"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"