[workspace]
resolver = "2"
members = ["portfolio", "data-sync", "data-sources/*", "operations"]

[workspace.dependencies]
tower = { version = "0.4.13", features = ["full"] }
anyhow = "1.0.58"
tokio = { version = "1.17", features = ["full"] }
chrono = "0.4"
futures = "0.3.15"
async-trait = "0.1.50"
bytes = "1.0.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
env_logger = "0.10.0"
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
