[package]
name = "operations"
version = "0.1.0"
authors = ["Ricardo Murillo <rcjmurillo@gmail.com>"]
edition = "2021"

[dependencies]
exchange = { path = "../exchanges/exchange" }

anyhow = "1.0.44"
async-trait = "0.1.50"
chrono = "0.4"
tokio = { version = "1.17", features = ["full"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
env_logger = "0.9.0"
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
rusqlite = "0.27.0"

[dev-dependencies]
quickcheck = "1.0.3"