[package]
name = "portfolio"
version = "0.1.0"
authors = ["Ricardo Murillo <rcjmurillo@gmail.com>"]
edition = "2021"

[dependencies]
binance = { path = "../exchanges/binance" }
coinbase = { path = "../exchanges/coinbase" }
coingecko = { path = "../exchanges/coingecko" }
exchange = { path = "../exchanges/exchange" }
market = { path = "../exchanges/market" }

anyhow.workspace = true
futures.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing-subscriber.workspace = true
log.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

cli-table = "0.4"
structopt = "0.3.22"
toml = "0.7.2"

[dev-dependencies]
quickcheck = "1.0.3"