[package]
name = "portfolio"
version = "0.1.0"
authors = ["Ricardo Murillo <rcjmurillo@gmail.com>"]
edition = "2021"

[dependencies]
binance = { path = "../data-sources/binance" }
coinbase = { path = "../data-sources/coinbase" }
coingecko = { path = "../data-sources/coingecko" }
exchange = { path = "../data-sources/exchange" }
market = { path = "../data-sources/market" }
data-sync = { path = "../data-sync" }

anyhow.workspace = true
futures.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing-subscriber.workspace = true
log.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

cli-table = "0.4"
structopt = "0.3.22"
toml = "0.7.3"
derive_builder = "0.12.0"

[dev-dependencies]
quickcheck = "1.0.3"