[package]
name = "portfolio"
version = "0.1.0"
authors = ["Ricardo Murillo <rcjmurillo@gmail.com>"]
edition = "2021"

[dependencies]
binance = { path = "../data-sources/binance" }
coinbase = { path = "../data-sources/coinbase" }
coingecko = { path = "../data-sources/coingecko" }
market = { path = "../data-sources/market" }
custom = { path = "../data-sources/custom" }
data-sync = { path = "../data-sync" }
operations = { path = "../operations" }

anyhow.workspace = true
futures.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing-subscriber.workspace = true
log.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

cli-table = "0.4.7"
derive_builder = "0.12.0"
structopt = "0.3.26"
toml = "0.8.8"
proptest = "1.2.0"

[dev-dependencies]
quickcheck = "1.0.3"
