[package]
name = "binance"
version = "0.1.0"
authors = ["Ricardo Murillo <rcjmurillo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-client = { path = "../api-client" }
market = { path = "../market" }
data-sync = { path = "../../data-sync" }
transactions = { path = "../../transactions" }

anyhow.workspace = true
async-trait.workspace = true
thiserror = "1.0.31"
bytes.workspace = true
chrono.workspace = true
hmac = "0.12.1"
hex = "0.4"
futures.workspace = true
tokio.workspace = true
tower.workspace = true
sha2 = "0.10.2"
reqwest = { version = "0.11.18", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
