[package]
name = "coinbase"
version = "0.1.0"
authors = ["Ricardo Murillo <rcjmurillo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-client = { path = "../api-client" }
market = { path = "../market" }
data-sync = { path = "../../data-sync" }
operations = { path = "../../operations" }

anyhow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.13.0"
hmac = "0.11.0"
hex = "0.4"
sha2 = "0.9.5"
