[package]
name = "coingecko"
version = "0.1.0"
authors = ["Ricardo Murillo <rcjmurillo@gmail.com>"]
edition = "2021"

[dependencies]
api-client = { path = "../api-client" }
market = { path = "../market" }

anyhow.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["time"] }
tower = { workspace = true, features = ["limit"] }
chrono.workspace = true
bytes.workspace = true
async-trait.workspace = true
hmac = "0.12.1"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
