[package]
name = "custom"
version = "0.1.0"
edition = "2021"

[dependencies]
data-sync = { path = "../../data-sync" }
operations = { path = "../../operations" }

anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
chrono.workspace = true
