[package]
name = "market"
version = "0.1.0"
authors = ["Ricardo Murillo <rcjmurillo@gmail.com>"]
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
tower = { workspace = true, features = ["limit"] }
serde_json.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["time"] }
reqwest = { version = "0.11", features = ["json"] }