[package]
name = "api-client"
version = "0.1.0"
authors = ["Ricardo Murillo <rcjmurillo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
tokio.workspace = true
tower = {workspace = true, features = ["buffer"]}
log.workspace = true
reqwest = { version = "0.11", features = ["json"] }
derive_builder = "0.12.0"
thiserror = "1.0.31"
redis = {version = "0.21.6", features = ["tokio-comp"] }