[package]
name = "binance"
version = "0.1.0"
authors = ["Ricardo Murillo <rcjmurillo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-client = { path = "../api-client" }
exchange = { path = "../exchange" }

anyhow = "1.0.58"
async-trait = "0.1.50"
bytes = "1.0.1"
chrono = "0.4"
hmac = "0.12.1"
hex = "0.4"
futures = "0.3.15"
tokio = { version = "1.17", features = ["time"] }
tower = { version = "0.4.13", features = ["limit", "retry"] }
sha2 = "0.10.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"