[package]
name = "coinbase"
version = "0.1.0"
authors = ["Ricardo Murillo <rcjmurillo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-client = { path = "../api-client" }
exchange = { path = "../exchange" }

anyhow = "1.0.58"
async-trait = "0.1.50"
bytes = "1.0.1"
chrono = "0.4"
base64 = "0.13.0"
hmac = "0.11.0"
hex = "0.4"
futures = "0.3.15"
sha2 = "0.9.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"