[package]
name = "coingecko"
version = "0.1.0"
authors = ["Ricardo Murillo <rcjmurillo@gmail.com>"]
edition = "2021"

[dependencies]
api-client = { path = "../api-client" }
exchange = { path = "../exchange" }
market = { path = "../market" }
anyhow = "1.0.58"
async-trait = "0.1.50"
bytes = "1.0.1"
chrono = "0.4"
hmac = "0.12.1"
hex = "0.4"
futures = "0.3.15"
tokio = { version = "1.17", features = ["time"] }
tower = { version = "0.4.13", features = ["limit"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"