[package]
name = "exchange"
version = "0.1.0"
authors = ["Ricardo Murillo <rcjmurillo@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.50"
bytes = "1.0.1"
chrono = "0.4"
hmac = "0.12.1"
hex = "0.4"
futures = "0.3.15"
sha2 = "0.10.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
rusqlite = "0.27.0"

[dev-dependencies]
quickcheck = "1.0.3"