[package]
name = "exchange"
version = "0.1.0"
authors = ["Ricardo Murillo <rcjmurillo@gmail.com>"]
edition = "2021"

[dependencies]
market = { path = "../market" }

anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex = "0.4"
sha2 = "0.10.2"
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12.1"
env_logger = "0.9.0"
rusqlite = "0.27.0"
redis = {version = "0.21.6", features = ["tokio-comp"] }

[dev-dependencies]
quickcheck = "1.0.3"
proptest = "1.0.0"